testing/Travis/testcases/prototype/shouldSucceed/InterfaceTest1.adl
CONTEXT InterfaceTest1 IN ENGLISH

  INTERFACE Identifier : I["Business actor"]
   BOX[ name : name ]

PATTERN Business
name :: "Business actor" * Identifier [UNI]
ENDPATTERN

ENDCONTEXT

{-
   Purpose: This script tests the mechanism of matching the source of an interface attribute to the target of the interface expression.
   Result: PASS
-}